@@ -46,6 +46,10 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Components", "Components", 
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Castle.Components.Binder.Tests-vs2005", "..\Components\General\Binder\Castle.Components.Binder.Tests\Castle.Components.Binder.Tests-vs2005.csproj", "{57ED99CE-404E-4029-A98A-2159E2E70E22}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "TestScaffolding-vs2005", "TestScaffolding\TestScaffolding-vs2005.csproj", "{C4107B52-109E-4629-A202-58E93917C80B}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Castle.MonoRail.ActiveRecordScaffold-vs2005", "Castle.MonoRail.ActiveRecordScaffold\Castle.MonoRail.ActiveRecordScaffold-vs2005.csproj", "{8C6EA891-66AF-4F48-A2CB-98669D5E7AA9}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
@@ -108,6 +112,14 @@ Global
 		{57ED99CE-404E-4029-A98A-2159E2E70E22}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{57ED99CE-404E-4029-A98A-2159E2E70E22}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{57ED99CE-404E-4029-A98A-2159E2E70E22}.Release|Any CPU.Build.0 = Release|Any CPU
+		{C4107B52-109E-4629-A202-58E93917C80B}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{C4107B52-109E-4629-A202-58E93917C80B}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{C4107B52-109E-4629-A202-58E93917C80B}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{C4107B52-109E-4629-A202-58E93917C80B}.Release|Any CPU.Build.0 = Release|Any CPU
+		{8C6EA891-66AF-4F48-A2CB-98669D5E7AA9}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{8C6EA891-66AF-4F48-A2CB-98669D5E7AA9}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{8C6EA891-66AF-4F48-A2CB-98669D5E7AA9}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{8C6EA891-66AF-4F48-A2CB-98669D5E7AA9}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -124,8 +136,10 @@ Global
 		{824EC872-2992-4518-8C41-4F87640D752A} = {A287E189-50B7-4EA3-A683-135F9F54ACF9}
 		{22432F75-FD21-474A-AB8F-43100DE79FDB} = {A287E189-50B7-4EA3-A683-135F9F54ACF9}
 		{7439F3D3-5F1B-4D03-ADE1-8EB85F711A53} = {A287E189-50B7-4EA3-A683-135F9F54ACF9}
+		{C4107B52-109E-4629-A202-58E93917C80B} = {A287E189-50B7-4EA3-A683-135F9F54ACF9}
 		{2409063E-BE05-4596-A677-758096D1C759} = {4CA9E7D1-3BEF-4B35-A771-EFBD1FC52BD6}
 		{6C51A1E3-7F20-4696-BFD6-829134678341} = {4CA9E7D1-3BEF-4B35-A771-EFBD1FC52BD6}
+		{8C6EA891-66AF-4F48-A2CB-98669D5E7AA9} = {4CA9E7D1-3BEF-4B35-A771-EFBD1FC52BD6}
 		{98F19522-C9B8-400D-8A12-DABB3DA9411D} = {9264F1C2-88DA-497B-AD12-99AC46B0292B}
 	EndGlobalSection
 EndGlobal
