@@ -2,15 +2,15 @@ $ValidationHelper.InstallScripts()
 
 <h2>Edit ${model.Type.Name}</h2>
 
-#if($flash.errors)
 <ul id="errors">
+#if($flash.errors)
 #foreach($error in $flash.errors)
   <li>$error</li>
 #end
-</ul>
 #end
+</ul>
 
-#set ($validatorForm = "return validateForm( this, false, false, false, false, 5 )" )
+#set ($validatorForm = "return validateForm( this, false, false, false, true, 16 )" )
 
 #if($useModelName)
 $PresentationHelper.Form( "update${model.Type.Name}", "scaffoldingform", "post", $validatorForm )
@@ -18,7 +18,7 @@ $PresentationHelper.Form( "update${model.Type.Name}", "scaffoldingform", "post",
 $PresentationHelper.Form( "update", "scaffoldingform", "post", $validatorForm )
 #end
 
-$HtmlHelper.InputHidden("${prefix}.${keyprop.Name}", ${id})
+$HtmlHelper.HiddenField("${prefix}.${keyprop.Name}")
 
 <div id="scaffoldmain">
 
@@ -70,7 +70,7 @@ $HtmlHelper.InputHidden("${prefix}.${keyprop.Name}", ${id})
 
 #end
 
-$HtmlHelper.SubmitButton("Save")
+<input type="submit" value="Save Changes" />
 
 </div>
 
@@ -78,4 +78,4 @@ $HtmlHelper.SubmitButton("Save")
 $PresentationHelper.LinkToBack("Back", null) | $PresentationHelper.LinkToList($model, $useModelName, "List", null)
 </p>
 
-$HtmlHelper.EndForm()
+</form>
